# GBM-Benchmark

./: .gitignore  CMakeLists.txt  LICENSE  README.md  dataset.py  gbt_cpu_runner.py  parse_args.py  run.py  utils.py  visualization.py  xgb_runner.py
.devcontainer/: Dockerfile.cpu  devcontainer.json
.devcontainer/install/: onedal_gnu.yml  ubuntu_build_onedal.sh  ubuntu_build_sklearn_intelex.sh  ubuntu_build_tvm.sh  ubuntu_install_conda.sh  ubuntu_install_core.sh  ubuntu_install_oneapi.sh  ubuntu_install_python_package.sh
buildsh/: README.md  onedal.sh  onedal_gnu.yml  sklearn_intelex.sh
cmake/: ExternalLibs.cmake
configs/: xgb_cpu.json
cpp/: CMakeLists.txt  group_tree.cpp  main.cpp  tree_model_vec.h  vector_tree.cpp
cpp/common/: common.cpp  common.h  pred_transform.h
cpp/exps/: README.md  common.h  testVectorization.cpp
cpp/exps/disassemble/: testVectorization_gcc_O3.txt  testVectorization_icc_O3_vec.txt
cpp/frontend/simple/: xgboost_json.cpp  xgboost_json.h
cpp/frontend/treeagg/: treeagg_json.cpp  treeagg_json.h
cpp/frontend/xgboost/: xgboost_json.cpp  xgboost_json.h
cpp/include/: frontend.h  group_tree.h  group_tree_acc.h
python/: analyse_tree.py  make_group_set.py  save_group_model.py
